--- a/packages/libs/blast-summary-view/README.adoc
+++ b/packages/libs/blast-summary-view/README.adoc
@@ -1,3 +1,5 @@
+This project houses the client assets for the BLAST WDK summary view offered by some VEuPathDB sites.
+
 == Getting Started with Create React App
 
 This project was bootstrapped with https://github.com/facebook/create-react-app[Create React App], using the https://github.com/VEuPathDB/web-dev/packages/cra-template[`@veupathdb` template].
@@ -18,7 +20,9 @@ You will be prompted to enter the VEuPathDB BRC Pre-Release Login credentials.
 
 **Required Environment Variables**
 
-- **`WDK_SERVICE_URL`** URL for a VEuPathDB service endpoint.
+- **`VEUPATHDB_LOGIN_USER`** VEuPathDB BRC prerelease user name (optional, but recommended)
+- **`VEUPATHDB_LOGIN_PASS`** VEuPathDB BRC prerelease user password (optional, but recommended)
+- **`WDK_SERVICE_URL`** URL for a VEuPathDB service endpoint (required).
 
 === `npm test`
 
